fix credit-hours overflow issue

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2411,6 +2411,7 @@ body.search-no-results .page-header {
 }
 
 .credit-hours {
+    display: inline-block;
     font-size: 1rem;
     font-weight: 400;
     background-color: $color-blue;
